Update weekly deepdive section to Start, Stop, Do Better
- Change section title from 'Your weekly deepdive' to 'Start, Stop, Do Better'
- Replace progress cards with Start, Stop, Do Better cards
- Add blurred effect with 'Insights Coming Soon' text
- Update card labels and subtitles to match new purpose
- Add CSS for blurred card styling with black text

--- a/team-login.html
+++ b/team-login.html
@@ -130,7 +130,7 @@
 
                     <!-- Team Progress Section -->
                     <div class="team-progress-section">
-                        <h2>Your weekly deepdive</h2>
+                        <h2>Start, Stop, Do Better</h2>
                         <div id="teamProgressCards" class="progress-cards">
                             <!-- Progress cards will be populated by JavaScript -->
                         </div>
