Separate sections and add Fast Track signature tool
- Separate Start, Stop, Do Better section from Your Team Ranking
- Add new Fast Track Signature Tool to Use section with blurred card
- Fix text positioning to show 'Insights Coming Soon' on top of blur
- Update CSS with proper z-index layering for blurred effects
- Add signature tool card styling with backdrop blur

--- a/team-login.html
+++ b/team-login.html
@@ -136,6 +136,14 @@
                         </div>
                     </div>
 
+                    <!-- Fast Track Signature Tool Section -->
+                    <div class="signature-tool-section">
+                        <h2>Fast Track Signature Tool to Use</h2>
+                        <div id="signatureToolCard" class="signature-tool-card">
+                            <!-- Signature tool will be populated by JavaScript -->
+                        </div>
+                    </div>
+
                 </div>
             </main>
         </div>
