--- a/team-login.html
+++ b/team-login.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="env-config.js"></script>
     <style>
         .login-header {
             text-align: center;
