Implement dynamic sprint dropdown based on module selection
- Add comprehensive module and sprint data structure (0-9 modules with all sprints)
- Convert sprint fields from text input to dropdown in both client management modals
- Add updateSprintDropdown() function to populate sprints based on selected module
- Add populateModuleDropdowns() function to initialize module dropdowns
- Add event listeners for module dropdown changes
- Update client management form to populate sprint dropdown when opening modal
- Sprint dropdown now shows only sprints for the selected module (e.g., Module 4 shows 3 sprints)

--- a/associate-login.html
+++ b/associate-login.html
@@ -433,7 +433,9 @@
                         </div>
                         <div class="form-group">
                             <label for="newClientSprint" class="form-label">Sprint</label>
-                            <input type="text" id="newClientSprint" class="form-control" value="Program WOOP">
+                            <select id="newClientSprint" class="form-control">
+                                <option value="">Select a sprint...</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label for="newClientSpeed" class="form-label">Speed Score</label>
@@ -542,7 +544,9 @@
                             </div>
                             <div class="form-group">
                                 <label for="clientSprint" class="form-label">Sprint</label>
-                                <input type="text" id="clientSprint" class="form-control">
+                                <select id="clientSprint" class="form-control">
+                                    <option value="">Select a sprint...</option>
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label for="clientSpeed" class="form-label">Speed Score</label>
