Fix module dropdown - only 9 modules (0-8) with proper names
- Remove hardcoded module options from HTML
- Remove Module 9 (Closing) from module data structure
- Keep only 9 modules (0-8) as requested
- Module dropdown now populated dynamically with correct names
- Sprint dropdown will show corresponding sprints for selected module

--- a/associate-login.html
+++ b/associate-login.html
@@ -419,16 +419,7 @@
                         <div class="form-group">
                             <label for="newClientModule" class="form-label">Current Module</label>
                             <select id="newClientModule" class="form-control">
-                                <option value="0">0 - Intro Module</option>
-                                <option value="1">1 - Individual and Company Identity</option>
-                                <option value="2">2 - Core Performance Elements</option>
-                                <option value="3">3 - Strategy - Understanding the Market</option>
-                                <option value="4">4 - Strategy - Strategy Development</option>
-                                <option value="5">5 - Strategy - Execution</option>
-                                <option value="6">6 - Organization & People - Organisational Structure</option>
-                                <option value="7">7 - Organization & People - People and Leadership</option>
-                                <option value="8">8 - Organization & People - Apply Aggressively Tech and AI</option>
-                                <option value="9">9 - Closing Module</option>
+                                <option value="">Select a module...</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -530,16 +521,7 @@
                             <div class="form-group">
                                 <label for="clientModule" class="form-label">Current Module</label>
                                 <select id="clientModule" class="form-control">
-                                    <option value="0">0 - Intro Module</option>
-                                    <option value="1">1 - Individual and Company Identity</option>
-                                    <option value="2">2 - Core Performance Elements</option>
-                                    <option value="3">3 - Strategy - Understanding the Market</option>
-                                    <option value="4">4 - Strategy - Strategy Development</option>
-                                    <option value="5">5 - Strategy - Execution</option>
-                                    <option value="6">6 - Organization & People - Organisational Structure</option>
-                                    <option value="7">7 - Organization & People - People and Leadership</option>
-                                    <option value="8">8 - Organization & People - Apply Aggressively Tech and AI</option>
-                                    <option value="9">9 - Closing Module</option>
+                                    <option value="">Select a module...</option>
                                 </select>
                             </div>
                             <div class="form-group">
